adds argument for part in lein run